Change string.format to cypher-dsl queries